# agentunit

./: .gitignore  .pre-commit-config.yaml  PROGRESS.md  README.md  pyproject.toml
blog/: why-agentunit-exists.md
docs/: OBSERVABILITY-DESIGN.md
examples/invokers/: streamlit_invoker.py
examples/prd-writer-generic/: .dockerignore  agentunit.yaml  app.py  requirements.txt
examples/prd-writer-generic/knowledge/: prd_template.md
examples/prd-writer-generic/skills/: prd_writer.md
examples/prd-writer-generic/tools/: doc_search.py
spec/: agentunit-spec-v0.1.md
spec/schemas/: agentunit-schema.json
src/agentunit/: __init__.py
src/agentunit/adapters/: base.py  registry.py
src/agentunit/adapters/generic_python/: __init__.py  adapter.py
src/agentunit/adapters/langchain/: __init__.py  adapter.py
src/agentunit/adapters/pm_agent/: __init__.py  adapter.py
src/agentunit/cli/: main.py
src/agentunit/commands/: init.py  list_frameworks.py  pack.py  run.py  validate.py
src/agentunit/core/: spec.py
tests/: test_adapters.py  test_spec.py
